--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "open": "npx cypress open",
-    "chrome":"npx cypress run --browser chrome"
-
+    "chrome": "npx cypress run --browser chrome"
   },
   "repository": {
     "type": "git",
@@ -19,10 +18,12 @@
   },
   "homepage": "https://github.com/darek9k/zapisani-testy#readme",
   "dependencies": {
-    "cypress": "^13.6.4",
     "faker": "^6.6.6"
   },
   "devDependencies": {
+    "cypress": "^13.6.4",
+    "cypress-command-chain": "^1.1.2",
+    "cypress-xpath": "^2.0.1",
     "typescript": "^5.3.3"
   }
 }
